changes in resume

--- a/resume.html
+++ b/resume.html
@@ -95,8 +95,8 @@
                   <li>Azure App Service</li>
                   <li>Azure Table Storage- to store small data.</li>
                   <li>Azure Blob Storage- to store profile picture,media and generated report.</li>
-                  <li>Azure Function to comunicate with other application</li>
-                  <li>Azure Service Bus (Message Queue service)- to comunicate with other technologies application</li>
+                  <li>Azure Function to communicate with other application</li>
+                  <li>Azure Service Bus (Message Queue service)- to communicate with other technologies application</li>
                   
                 </ul>
                 </p>
