--- a/about.html
+++ b/about.html
@@ -103,6 +103,9 @@
                 </ul>
               </div>
             </div>
+            <div class="row">
+              <a href="resume.html" class="btn btn-link" style="font-size: 24px;">Click For Resume</a>
+            </div>
             <p>
               
             </p>
@@ -111,6 +114,24 @@
 
       </div>
     </section><!-- End About Section -->
+  
+    <!-- <section id="skills" class="skills">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <a href="about.html" class="btn-about">About Me</a>
+          <p></p>
+        </div>
+ 
+
+      </div>
+    </section> -->
+
+
+
+
+
+
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills">
