--- a/resume.html
+++ b/resume.html
@@ -182,7 +182,7 @@
             </div>
           </div>
         </div>
-
+        <a href="Resume.docx">Click here to Download the latest Resume</a>
       </div>
     </section><!-- End Resume Section -->
 
