--- a/resume.html
+++ b/resume.html
@@ -134,7 +134,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Congnizant Technologies Solutions</h4>
+              <h4>Cognizant Technology Solutions</h4>
               <h5>Dec 2018 - Present</h5>
               <p><em>Full Stack Developer </em></p>
               <p>
